General adjustments to the whole project

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@
 10_capstone/data
 
 10_capstone/w2/data/
+
+10_capstone/app/textApp/data/
+
+10_capstone/prediction/data/
+
+10_capstone/exploration/data/
